--- a/src/main/resources/views/devices_grouped.fxml
+++ b/src/main/resources/views/devices_grouped.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 
 <!--
   Author: vladimir_shi
   Since: 12.09.2025
   * Окно группированной таблицы приборов *
 -->
-
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
+<?import java.net.URL?>
 <VBox xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.kipia.management.kipia_management.controllers.DevicesGroupedController"
       spacing="10" prefWidth="1000" prefHeight="700" VBox.vgrow="ALWAYS">
