--- a/src/main/resources/styles/light-theme.css
+++ b/src/main/resources/styles/light-theme.css
@@ -109,7 +109,7 @@
 }
 
 .button-photo-gallery-hover {
-    -fx-background-color: #18e6e6;
+    -fx-background-color: #18c8c8;
     -fx-padding: 10 20;
     -fx-min-width: 160px;
     -fx-pref-width: 160px;
@@ -572,10 +572,6 @@
 }
 
 /* |REPORTS.FXML| */
-.reports-root {
-    -fx-padding: 20px;
-}
-
 .report-buttons {
     -fx-spacing: 20px;
 }
@@ -594,11 +590,11 @@
 .chart-pane {
     -fx-background-color: transparent;
     -fx-padding: 0;
-    /* Явно разрешаем растягивание */
     -fx-min-width: 0;
     -fx-min-height: 0;
     -fx-max-width: Infinity;
     -fx-max-height: Infinity;
+    -fx-alignment: center;
 }
 
 .report-export-button {
@@ -622,8 +618,8 @@
 /* |3. PHOTO-GALLERY.FXML| */
 /* 3.1 Галерея фото */
 .photo-gallery-root {
-    -fx-background-color: #f5f7fa;
-    -fx-padding: 10;
+    -fx-background-color: transparent;
+    -fx-max-height: Infinity;
 }
 
 /* 3.2 Статистика (обновленная) */
@@ -632,22 +628,19 @@
     -fx-background-radius: 6;
     -fx-border-radius: 6;
     -fx-border-color: #e0e0e0;
-    -fx-border-width: 1;
-    -fx-padding: 12;
+    -fx-padding: 20px;
     -fx-spacing: 8;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.05), 4, 0, 0, 1);
 }
 
 .statistics-grid {
     -fx-alignment: center;
-    -fx-padding: 0;
 }
 
 .statistics-title {
     -fx-font-size: 14px;
     -fx-font-weight: bold;
     -fx-text-fill: #2c3e50;
-    -fx-padding: 0 0 5 0;
 }
 
 .statistics-numbers {
@@ -687,7 +680,6 @@
     -fx-font-size: 14px;
     -fx-font-weight: bold;
     -fx-text-fill: #2c3e50;
-    -fx-padding: 0 0 5 0;
 }
 
 .filtered-stats-container {
@@ -746,10 +738,10 @@
 
 /* 3.3 Панель поиска и фильтров */
 .search-filter-panel {
-    -fx-padding: 12 0;
-    -fx-spacing: 10;
+    -fx-padding: 0 0 10 0;
+    -fx-spacing: 0;
     -fx-border-color: #e0e0e0;
-    -fx-border-width: 0 0 1 0;
+    -fx-border-width: 0 0 0 0;
 }
 
 .search-row {
@@ -975,13 +967,15 @@
 .photo-gallery-listview {
     -fx-background-color: transparent;
     -fx-border-color: transparent;
-    -fx-padding: 8 0;
+    -fx-padding: 0 0;
+    -fx-max-height: Infinity;
 }
 
 .photo-gallery-listview .list-cell {
     -fx-background-color: transparent;
     -fx-padding: 6px 0;
     -fx-border-width: 0;
+    -fx-max-height: Infinity;
 }
 
 .photo-gallery-listview .list-cell:empty {
@@ -1705,7 +1699,7 @@
     -fx-border-radius: 4px;
     -fx-background-radius: 4px;
     -fx-text-fill: #333;
-    -fx-padding: 8px 16px;
+
 }
 
 .custom-alert .button:hover {
